fix:Reduce margin-top value for main in media query for tablets to eliminate gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,7 +173,7 @@ main {
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
-        margin-top: 79px;
+        margin-top: 77px;
     }
 
     /* Hero section */
